fixed clipping on image

--- a/css/creature-block.css
+++ b/css/creature-block.css
@@ -28,3 +28,8 @@
     width: 100%;
     height: 100%;
 }
+
+.creature-container {
+    width: 100%;
+    overflow: hidden;
+}
